# torchstack

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  demo.py  main.py  pyproject.toml
.github/workflows/: build-docs.yml  testing.yml
docs/: mkdocs.yml
docs/site/: 404.html  index.html
examples/scripts/: testing.py
examples/text-classification/: run.py
examples/text-generation/: main.py  run.py
notebooks/: NOTEBOOKS.md  exploring.ipynb  union_mapping.ipynb
src/: layer.py  main.py  stage.py
src/classes/: average.py  bema.py  weighted.py
src/consensus/: __init__.py  base_learner.py  config.py  configuration.py  ensemble.py  ensemble_generator.py  generator.py  layer.py  main.py  member.py  optimization.py  stage.py  tokenizer.py  vocabulary.py
src/consensus/aggregators/: aggregator.py  auto.py  average.py  base.py  weighted.py
src/consensus/layers/: __init__.py  base.py  code.py  text.py
src/consensus/supervisors/: base.py
src/torchstack/: __init__.py  distribute.py  ensemble.py  ensemble_model.py  ensenmle_model.py  member.py
src/torchstack/strategies/: __init__.py  base.py  cag.py  deepen.py  unite.py
tests/: test_stage.py
