[project]
name = "consensus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.2",
    "torch>=2.4.1",
    "transformers>=4.45.2",
    "typing>=3.10.0.0",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.uv]
dev-dependencies = [
    "huggingface-hub[cli]>=0.25.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
