[project]
name = "consensus"
version = "0.1.0"
description = "Leverage consensus to build transfor based ensembles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.2",
    "pydantic>=2.10.1",
    "ruff>=0.7.4",
    "torch>=2.4.1",
    "transformers>=4.45.2",
    "typing>=3.10.0.0",
]

[project.urls]
Homepage = "https://github.com/bodeby/consensus"
Issues = "https://github.com/bodeby/consensus/issues"
Documentation = "https://bodeby.github.io/consensus/"

[tool.uv]
dev-dependencies = [
    "huggingface-hub[cli]>=0.25.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pytest>=8.3.3",
]

[tool.ruff]
extend-exclude = ["*.ipynb"]
